--- a/render.yaml
+++ b/render.yaml
@@ -1,24 +1,16 @@
 services:
   - type: web
-    name: ecogas-django-admin
+    name: ecogas-admin
     env: python
     plan: free
-    region: oregon  # ✅ Mesma região dos seus outros serviços
-    rootDirectory: django-admin  # ✅ IMPORTANTE: pasta do projeto
     buildCommand: |
       pip install -r requirements.txt
       python manage.py collectstatic --noinput
-      python manage.py migrate --noinput
-    startCommand: gunicorn config.wsgi:application --bind 0.0.0.0:$PORT
+    startCommand: gunicorn config.wsgi:application
     envVars:
+      - key: DEBUG
+        value: False
       - key: SECRET_KEY
         generateValue: true
-      - key: DEBUG
-        value: false
-      - key: ALLOWED_HOSTS
-        value: ecogas-django-admin.onrender.com
-      - key: ECO_GAS_API_URL
-        value: https://api-ecogas.onrender.com
-
-    healthCheckPath: /dashboard/
-    autoDeploy: true
+      - key: WEB_CONCURRENCY
+        value: 4
